@@ -10,3 +10,6 @@ broadly compatible with it. Compared to tcpserver, onenetd is missing
 support for access control, IDENT lookups and DNS resolution, but adds
 the ability to refuse connections with a fixed response once the
 connection limit is reached.
+
+onenetd is free software available under the ISC license; see the
+copyright notice at the top of onenetd.c for more details.
